--- a/Website/index.html
+++ b/Website/index.html
@@ -6,6 +6,7 @@
   <title>VCC Listing</title>
   <script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="ColorScheme.css">
   <link rel="icon" href="./favicon.ico">
 </head>
 <body>
